# pokezoo_cpp

./: .clang-tidy  .gitignore  CMakeLists.txt  compile_commands.json  neovim.json
archive/http/: request.cpp  request.h
cmake/: StaticAnalyzers.cmake
cmake.desktop/: CMakeLists.txt
cmake.wasm/: CMakeLists.txt
data/: all.txt  gen_1.txt  genders_ids.txt
src/: main.cpp
src/animation/: animation.h  animation_controller.cpp  animation_controller.h  frame.h  serializer.cpp  serializer.h
src/application/: application.cpp  application.h
src/assets/animations/pokemons/: bw_old_overworld.json  bw_overworld.json  markers.json
src/assets/animations/trainers/: bw_male.json
src/assets/json/: bw_old_overworld.json
src/assets/maps/: zoo.tmx
src/config/: config.h
src/core/: config.h  enums.h
src/http/: request.h
src/managers/: asset_manager.cpp
src/managers/asset/: asset_manager.cpp  asset_manager.h
src/managers/input/: input_manager.cpp  input_manager.h
src/managers/logger/: logger_manager.h
src/map/: layer.h  map.cpp  map.h  tile.h
src/sprite/: pokemon.cpp  pokemon.h  sprite.cpp  sprite.h  trainer.cpp  trainer.h
src/structs/: my_symver.h  my_vector.h  stats.h
src/utils/: enums_utils.cpp  enums_utils.h  math_utils.cpp  math_utils.h  render_utils.cpp  render_utils.h  string_utils.cpp  string_utils.h  uuid.h
utils/: sprite_sheet_utils.js
